--- a/Views/User/user-login.ejs
+++ b/Views/User/user-login.ejs
@@ -10,11 +10,12 @@
                 </div>
             </div>
         </div>
-        <section class="pt-150 pb-150">
+        <section class="pt-100 pb-100">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 m-auto">
                         <div class="row">
+                            <div class="col-lg-3"></div>
                             <div class="col-lg-6">
                                 <div class="login_wrap widget-taber-content p-30 background-white border-radius-10 mb-md-5 mb-lg-0 mb-sm-5">
                                     <div class="padding_eight_all bg-white">
@@ -24,64 +25,45 @@
                                         <% if( locals.emailDoesNotExist ){ %>
                                             <div class="alert alert-danger">Please Check your email</div>
                                         <% } %>
-                                        <% if( locals.invalidOtp ){ %>
-                                            <div class="alert alert-danger">Please enter valid otp</div>
+                                        <% if( locals.invalidPassword ){ %>
+                                            <div class="alert alert-danger">Please enter valid password</div>
                                         <% } %>
                                         <% if( locals.blockedUser ){ %>
                                             <div class="alert alert-danger">User blocked by admin</div>
                                         <% } %>
+                                        <% if( locals.invalidOtp ){ %>
+                                            <div class="alert alert-danger">OTP is incorrect , <span class="text-brand">Please send OTP again</span></div>
+                                        <% } %>
+                                        <% if( locals.passwordChanged ){ %>
+                                            <div class="alert alert-success">Password changed successfully</div>
+                                        <% } %>
 
-                                        <% if( locals.UserLogin ) {%>
-                                            
-                                            <form method="post" action="/postUserLogin">
-                                                <% if(locals.otpSent){ %>
-                                                    <div class="alert-success">An OTP have been shared to your email</div>
-                                                <% } %>
-                                                <div class="form-group">
-                                                    <input type="email" value="<%= UserMail %>" id="ULEmail" name="ULEmail" placeholder="Your Email" required="true" disabled style="background-color: rgba(243, 237, 237, 0.626);">
-                                                </div>
-                                                <input value="<%= UserMail %>" name="UserMail" type="hidden">
-                                                <input value="<%= OTP %>" name="OTP" type="hidden">
-                                                <div class="form-group">
-                                                    <input type="password" id="ULOtp" name="ULOtp" placeholder="Otp" required="true">
-                                                </div>
-                                                
+                                        <form method="post" action="/sendOtp">
+                                            <div class="form-group">
+                                                <input type="email" id="ULEmail" name="ULEmail" placeholder="Your Email" required="true">
+                                            </div>
 
-                                                <!-- <div class="form-group">
-                                                    <input type="password" id="ULPassword" name="ULPassword" placeholder="Password" required="true">
-                                                </div> -->
-                                                <!-- <div class="login_footer form-group">
-                                                    <div class="chek-form">
-                                                        <div class="custome-checkbox">
-                                                            <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
-                                                            <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
-                                                        </div>
-                                                    </div>
-                                                    <a class="text-muted" href="#">Forgot password?</a>
-                                                </div> -->
-                                                <div class="form-group" style="display: flex; justify-content: center;">
-                                                    <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login" style="width: 300px;">Log in</button>
+                                            <div class="form-group">
+                                                <input type="password" id="ULPassword" name="ULPassword" placeholder="Password" required="true">
+                                            </div> 
+                                            <div class="login_footer form-group">
+                                                <div class="chek-form">
+                                                    <!-- <div class="custome-checkbox">
+                                                        <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
+                                                        <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label>
+                                                    </div> -->
                                                 </div>
-                                                <div class="text-muted text-center">Don't have an account? <a href="/userSignup">Sign up now</a></div>
-                                            </form>
-                                            <% } else { %>
-                                                <form method="post" action="/sendOtp">
-                                                    <div class="form-group">
-                                                        <input type="email" id="ULEmail" name="ULEmail" placeholder="Your Email" required="true">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <input type="password" id="ULOtp" name="ULOtp" placeholder="Otp" disabled style="background-color: rgba(243, 237, 237, 0.626);">
-                                                    </div>
-                                                    <div class="form-group" style="display: flex; justify-content: center;">
-                                                        <button type="submit" class="btn btn-fill-out btn-block hover-up" name="sendOtp" style="width: 300px;">Send otp</button>
-                                                    </div>
-                                                    
-                                                    <div class="text-muted text-center">Don't have an account? <a href="/userSignup">Sign up now</a></div>
-                                                </form>
-                                            <% } %>
+                                                <a class="text-muted" href="/forgotPassword">Forgot password?</a>
+                                            </div>
+                                            <div class="form-group" style="display: flex; justify-content: center;">
+                                                <button type="submit" class="btn btn-fill-out btn-block hover-up" name="login" style="width: 300px;">Send OTP</button>
+                                            </div>
+                                            <div class="text-muted text-center">Don't have an account? <a href="/userSignup">Sign up now</a></div>
+                                        </form> 
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-3"></div>
                         </div>
                     </div>
                 </div>
