--- a/Views/User/user-profile.ejs
+++ b/Views/User/user-profile.ejs
@@ -17,7 +17,7 @@
                     <div class="col-lg-10 m-auto">
                         <div class="row">
                             <!-- Side bar -->
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <div class="dashboard-menu">
                                     <ul class="nav flex-column" role="tablist">
                                         <li class="nav-item">
@@ -25,9 +25,6 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="orders-tab" data-bs-toggle="tab" href="#orders" role="tab" aria-controls="orders" aria-selected="false"><i class="fi-rs-shopping-bag mr-10"></i>Orders</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" id="track-orders-tab" data-bs-toggle="tab" href="#track-orders" role="tab" aria-controls="track-orders" aria-selected="false"><i class="fi-rs-shopping-cart-check mr-10"></i>Track Your Order</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="address-tab" data-bs-toggle="tab" href="#address" role="tab" aria-controls="address" aria-selected="true"><i class="fi-rs-marker mr-10"></i>My Address</a>
@@ -42,7 +39,7 @@
                                 </div>
                             </div>
                             <!-- Details -->
-                            <div class="col-md-8">
+                            <div class="col-md-9">
                                 <div class="tab-content dashboard-content">
                                     <!-- Dashboard -->
                                     <div class="tab-pane fade active show" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
@@ -64,66 +61,38 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="table-responsive">
-                                                    <table class="table">
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Order</th>
-                                                                <th>Date</th>
-                                                                <th>Status</th>
-                                                                <th>Total</th>
-                                                                <th>Actions</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            <tr>
-                                                                <td>#1357</td>
-                                                                <td>March 45, 2020</td>
-                                                                <td>Processing</td>
-                                                                <td>$125.00 for 2 item</td>
-                                                                <td><a href="#" class="btn-small d-block">View</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>#2468</td>
-                                                                <td>June 29, 2020</td>
-                                                                <td>Completed</td>
-                                                                <td>$364.00 for 5 item</td>
-                                                                <td><a href="#" class="btn-small d-block">View</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>#2366</td>
-                                                                <td>August 02, 2020</td>
-                                                                <td>Completed</td>
-                                                                <td>$280.00 for 3 item</td>
-                                                                <td><a href="#" class="btn-small d-block">View</a></td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Order tracking -->
-                                    <div class="tab-pane fade" id="track-orders" role="tabpanel" aria-labelledby="track-orders-tab">
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <h5 class="mb-0">Orders tracking</h5>
-                                            </div>
-                                            <div class="card-body contact-from-area">
-                                                <p>To track your order please enter your OrderID in the box below and press "Track" button. This was given to you on your receipt and in the confirmation email you should have received.</p>
-                                                <div class="row">
-                                                    <div class="col-lg-8">
-                                                        <form class="contact-form-style mt-30 mb-50" action="#" method="post">
-                                                            <div class="input-style mb-20">
-                                                                <label>Order ID</label>
-                                                                <input name="order-id" placeholder="Found in your order confirmation email" type="text" class="square">
-                                                            </div>
-                                                            <div class="input-style mb-20">
-                                                                <label>Billing email</label>
-                                                                <input name="billing-email" placeholder="Email you used during checkout" type="email" class="square">
-                                                            </div>
-                                                            <button class="submit submit-auto-width" type="submit">Track</button>
-                                                        </form>
-                                                    </div>
+                                                    <% if(orders.length){ %>
+                                                        <table class="table">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th>Date</th>
+                                                                    <th>Order Status</th>
+                                                                    <th>Payment status</th>
+                                                                    <th>Total</th>
+                                                                    <th>Actions</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            <% orders.forEach((order)=>{ %>
+                                                                <tr>
+                                                                    <td><%= order.createdAt.toLocaleDateString('en-US') %></td>
+                                                                    <% if(order.orderStatus === 'Cancelled') {%>
+                                                                        <td class="text-danger"><%= order.orderStatus %></td>
+                                                                    <% } else if(order.orderStatus === 'Returned') { %>
+                                                                        <td class="text-warning"><%= order.orderStatus %></td>
+                                                                    <% }else{ %>
+                                                                        <td class="text-brand"><%= order.orderStatus %></td>
+                                                                    <% } %>
+                                                                    <td><%= order.paymentStatus %></td>
+                                                                    <td>₹<%= order.totalAmount %> <span class="text-danger">for</span> <%= order.products.length %> item</td>
+                                                                    <td><a href="/orderView?orderId=<%= order._id %>" class="btn-small d-block">View</a></td>
+                                                                </tr>
+                                                            <% }) %>
+                                                            </tbody>
+                                                        </table>
+                                                    <% }else{ %>
+                                                        <h4 class="text-danger">You don't have orders. <span class="text-brand">Enjoy every seconds, </span> <u><a href="/allCategory">we are waiting for you...!</a></u> </h4>
+                                                    <% } %>
                                                 </div>
                                             </div>
                                         </div>
@@ -182,13 +151,13 @@
                                                     <h5>Account Details</h5>
                                                 </div>
                                                 <div>
-                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Change</button>
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#changeUserDetails">Change</button>
                                                 </div>
                                                 <!-- Button trigger modal -->
                                                 
                                                   
                                                   <!-- Modal -->
-                                                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal fade" id="changeUserDetails" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                                     <div class="modal-dialog" role="document">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
