--- a/Views/User/user-resetPassword.ejs
+++ b/Views/User/user-resetPassword.ejs
@@ -27,7 +27,7 @@
                                                 <div class="text-danger" id="checkPasswordMatch" style="display: none;">Password doesn't match</div>
                                             </div> 
                                             <div class="form-group" style="display: flex; justify-content: center;">
-                                                <button type="submit" id="loginButton" class="btn btn-fill-out btn-block hover-up" name="login" style="width: 300px;">Send OTP</button>
+                                                <button type="submit" id="loginButton" class="btn btn-fill-out btn-block hover-up" name="login" style="width: 300px;">Reset password</button>
                                             </div>
                                         </form> 
                                     </div>
