--- a/Views/User/user-wishlist.ejs
+++ b/Views/User/user-wishlist.ejs
@@ -35,7 +35,7 @@
                                             <td class="price" data-title="Price"><span>₹ <%= product.productId.productPrice %></span></td>
                                             <td class="text-right" data-title="Cart">
                                                 <button class="btn btn-sm">
-                                                    <a href="/cart?id=<%= product.productId._id %>" style="text-decoration: none; color: #fff;"><i class="fi-rs-shopping-bag mr-5"></i>Add to cart</a>
+                                                    <a data-productId="<%= product.productId._id %>" class="addToCart" style="text-decoration: none; color: #fff;"><i class="fi-rs-shopping-bag mr-5"></i>Add to cart</a>
                                                 </button>
                                             </td>
                                             <td class="action" data-title="Remove"><a href="/wishlistDelete?id=<%= product.productId._id %>"><i class="fi-rs-trash text-danger"></i></a></td>
@@ -50,5 +50,44 @@
         </section>
     </main>
     
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function(){
+             document.querySelectorAll('.addToCart').forEach((element)=>{
+                element.addEventListener('click', function(event){
+                  
+                    event.preventDefault();
+                    const productId = element.getAttribute('data-productId');
+                    fetch(`addToCartFromWhilshlist?id=${productId}`)
+                    
+                    .then((response)=>{
+                        if(!response.ok){
+                            throw new Error(`HTTP error! Status: ${response.status}`);
+                        }
+                        return response.json()
+                    })
+
+                    .then((data)=>{
+                        console.log("Added to cart:", data);
+                        Swal.fire({
+                            position : 'top-center',
+                            icon : 'success',
+                            title : 'Added to cart',
+                            showConfirmButton: false,
+                            timer: 1500
+                        })
+                        setTimeout(()=>{
+                            window.location.href = '/wishlist';
+                        },1000)
+                    })
+
+                    .catch((err)=>{
+                        console.log(err);
+                    })
+
+                })
+            })
+        })
+    </script>
 
     <%- include('../Partials/userFooter')  -%>
